# audio-ninja

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: cd.yml  ci.yml
docs/: index.md
docs/developer-documentation/: building.md  index.md  testing.md
docs/user-documentation/: index.md  shortcuts.md
scripts/: download-ffmpeg.sh  test-actions.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: control.rs  decoder.rs  engine.rs  mod.rs  output.rs  resampler.rs
src-tauri/src/export/: csv.rs  mod.rs  segments.rs
src-tauri/src/markers/: mod.rs  model.rs  store.rs  validate.rs
src/components/: ErrorAlert.svelte  Header.svelte  MarkerPanel.svelte  PlaybackControls.svelte  SegmentPanel.svelte  ShortcutsPanel.svelte  SuccessToast.svelte  WaveformDisplay.svelte  WelcomeScreen.svelte
src/lib/: actions.ts  shortcuts.ts  state.svelte.ts  types.ts  utils.ts  validation.ts
src/routes/: +page.svelte
src/tests/: setup.ts
src/tests/helpers/: reset-state.ts
src/tests/unit/: actions.editing.test.ts  actions.import.test.ts  actions.keyboard.test.ts  actions.markers.test.ts  actions.playback.test.ts  actions.polling.test.ts  actions.seeking.test.ts  shortcuts.test.ts  utils.test.ts  validation.test.ts
