[package]
name = "media-markup"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "media_markup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "1"
parking_lot       = "0.12"
uuid              = { version = "1", features = ["v4"] }
atomic_float      = "0.1"
rtrb              = "0.3"
cpal              = "0.15"
symphonia         = { version = "0.5", features = ["all"] }
rubato            = "0.15"
csv               = "1"

[features]
# Enables NullSink for unit tests that don't require audio hardware.
test-audio = []

